Filter By Rating: fix overlapping stars (https://github.com/woocommerce/woocommerce-blocks/pull/11644)

--- a/plugins/woocommerce-blocks/assets/js/blocks/rating-filter/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/rating-filter/style.scss
@@ -31,8 +31,6 @@
 
 	.wc-block-components-product-rating__stars {
 		display: inline-block;
-		line-height: 1;
-		height: 1em;
 	}
 
 	.wc-blocks-components-form-token-field-wrapper {
